# EventManager-PY

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.bat  commitlint.config.js  pyproject.toml  run.bat
assets/html_templates/: redeem_ticket.html
docs/: test_ticket_validation.md
src/: main.py
src/event/application/: create_event_use_case.py  delete_event_use_case.py  dtos.py  errors.py  list_event_use_case.py  list_staffs_with_email_and_name_use_case.py  update_event_use_case.py
src/event/domain/: errors.py  event.py
src/event/ui/: create_event_gui.py  create_event_mock_gui.py  event_form_gui.py  list_event_client_gui.py  list_event_organizer_gui.py  staff_manager_gui.py
src/events/application/: create_event_use_case.py  errors.py  list_event_use_case.py
src/events/domain/: errors.py  event.py  events.py
src/events/ui/: create_event_gui.py  list_event_gui.py
src/friendship/application/: accept_friendship_invite_use_case.py  delete_friendship_use_case.py  dtos.py  errors.py  list_friendships_with_user_email_and_name_use_case.py  send_friendship_invite_use_case.py
src/friendship/domain/: errors.py  friendship.py  friendship_status.py
src/friendship/ui/: friendship_manager_gui.py  friendship_pending_invites_gui.py
src/scripts/: play_friendship_backend.py  play_friendship_gui.py  play_populate_friendship.py  test_ticket_validation.sql
src/shared/: composition_root.py  container.py
src/shared/domain/: auth_context.py
src/shared/infra/: error_logger.py
src/shared/ui/: __init__.py  base_gui.py  navigation_manager.py  (+2 more)
(+41 files in other folders)
