[project]
name = "eventmanager-py"
version = "0.1.0"
description = "Desktop application for event and ticket management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "FreeSimpleGUI",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.1",
    "pre-commit"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C90", "RUF", "UP"]
ignore = ["E501"]
unfixable = ["ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["friendship", "shared", "user"]
